--- a/template.yml
+++ b/template.yml
@@ -35,13 +35,12 @@ Resources:
       Runtime: nodejs20.x
       Environment:
         Variables:
-          DB_HOST: "your-db-host"
-          DB_PORT: "5432"
-          DB_USER: "your-db-username"
-          DB_PASSWORD: "your-db-password"
-          DB_NAME: "your-db-name"
+          ProxyHostName: "your-db-host"
+          Port: "5432"
+          DBUserName: "your-db-username"
+          DBName: "your-db-name"
       Policies:
-        - AWSLambdaVPCAccessExecutionRole  # Allows Lambda to access the VPC
+        - AWSLambdaVPCAccessExecutionRole
         - Version: '2012-10-17'
           Statement:
             Effect: Allow
