--- a/template.yml
+++ b/template.yml
@@ -33,6 +33,16 @@ Resources:
       CodeUri: ./authorizer
       Handler: handler.authorizer
       Runtime: nodejs20.x
+      VpcConfig:
+        SecurityGroupIds:
+          - sg-07cd5189fff3b3e5f
+        SubnetIds:
+          - subnet-073fbedd48a949edb
+          - subnet-0306dd111f2d31e35
+          - subnet-0b961ebc9ad39675a
+          - subnet-07190ab186fbe6c21
+          - subnet-0c5a7b56ede58b1f2
+          - subnet-0f575c0ae673a7908
       Environment:
         Variables:
           ProxyHostName: "your-db-host"
