--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Lambda to AWS
+name: Deploy Go Lambdas to AWS
 
 on:
   push:
@@ -13,24 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          node-version: '20'
-
-      - name: Install dependencies in root folder
-        run: |
-          npm install
-
-      - name: Install dependencies in authorizer subfolder
-        run: |
-          cd authorizer
-          npm install
-          cd ..
+          go-version: '1.16'
 
       - name: Install AWS SAM CLI
         run: |
-          pip install aws-sam-cli
+          sudo pip install aws-sam-cli
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -38,6 +28,20 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+
+      - name: Build Go application in 'auth' directory
+        run: |
+          cd auth
+          go mod tidy
+          go build -o main main.go
+          cd ..
+
+      - name: Build Go application in 'hello-world' directory
+        run: |
+          cd hello-world
+          go mod tidy
+          go build -o main main.go
+          cd ..
 
       - name: Build and Deploy SAM Application
         run: |
